Improved character portrait and section scaling to reduce overlap on narrower screens

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <div class="portrait"><img src="img\NoahPortrait.png" alt="Character Portrait"></div>
                 </div>
             </section>
+            <section id="bottom">
+            </section>
         </section>
     </body>
 </html>
