Added slots for accessories and gems, adjusted scaling for center items.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                 <div id="characterPortrait">
                     <div class="portrait"><img src="img\NoahPortrait.png" alt="Character Portrait"></div>
                 </div>
+                <div id="equipment">
+                    <div id="gems">
+                        <div class="gem1"><img src="img\gemOutline.png" alt="Gem 1"></div>
+                        <div class="gem2"><img src="img\gemOutline.png" alt="Gem 2"></div>
+                        <div class="gem3"><img src="img\gemOutline.png" alt="Gem 3"></div>
+                    </div>
+                    <div id="accessories">
+                        <div class="accessory"><img src="img\accessory.png" alt="Accessory 1"></div>
+                        <div class="accessory"><img src="img\accessory.png" alt="Accessory 2"></div>
+                        <div class="accessory"><img src="img\accessory.png" alt="Accessory 3"></div>
+                    </div>
+                </div>
             </section>
             <section id="bottom">
             </section>
