--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </div>
                 <div id="equipment">
                     <div id="gems">
-                        <div class="gem1"><img src="img\gemOutline.png" alt="Gem 1"></div>
-                        <div class="gem2"><img src="img\gemOutline.png" alt="Gem 2"></div>
-                        <div class="gem3"><img src="img\gemOutline.png" alt="Gem 3"></div>
+                        <div class="gem"><img src="img\gemOutline.png" alt="Gem 1"></div>
+                        <div class="gem"><img src="img\gemOutline.png" alt="Gem 2"></div>
+                        <div class="gem"><img src="img\gemOutline.png" alt="Gem 3"></div>
                     </div>
                     <div id="accessories">
                         <div class="accessory"><img src="img\accessory.png" alt="Accessory 1"></div>
