Started on class section, further scaling adjustments to center

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 </div>
             </section>
             <section id="bottom">
+                <div id="class">
+                    <div class="classIcon"><img src="img\Swordfighter.png" alt="Class Icon"></div>
+                </div>
             </section>
         </section>
     </body>
