Added Class name and rank text, adjusted scaling in center and bottom, removed redundant code

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             <section id="bottom">
                 <div id="class">
                     <div class="classIcon"><img src="img\Swordfighter.png" alt="Class Icon"></div>
+                    <div id="classInfo">
+                        <h1 class="className">Swordfighter</h1>
+                        <p class="rank">Rank: 20</p>
+                    </div>
                 </div>
             </section>
         </section>
