Reverted to flex-based design, added level text, adjusted center scaling

--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@
                 </div>
             </section>
             <section id="bottom">
-                <div id="class">
-                    <div class="classIcon"><img src="img\Swordfighter.png" alt="Class Icon"></div>
-                    <div id="classInfo">
-                        <h1 class="className">Swordfighter</h1>
-                        <p class="rank">Rank: 20</p>
+                <div id="info">
+                    <div id="class">
+                        <div class="classIcon"><img src="img\Swordfighter.png" alt="Class Icon"></div>
+                        <div id="classInfo">
+                            <h1 class="infoText">Swordfighter</h1>
+                            <p class="infoText">Rank: 20</p>
+                        </div>
+                    </div>
+                    <div id="characterLevel">
+                        <h1 class="infoText">Level:</h1>
+                        <h1 class="infoText">99</h1>
                     </div>
                 </div>
             </section>
