Added Skill slots and Art slots. Relative positions and scaling temporary

--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
                         <h1 class="infoText">99</h1>
                     </div>
                 </div>
+                <div id="skills">
+                    <div id="classSkills">
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 1"></div>
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 2"></div>
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 3"></div>
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 4"></div>
+                    </div>
+                    <div id="masterSkills">
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Master Skill 1"></div>
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Master Skill 2"></div>
+                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Master Skill 3"></div>
+                    </div>
+                </div>
+                <div id="arts">
+                    <div id="masterArts">
+                        <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 1"></div>
+                        <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 2"></div>
+                        <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 3"></div>
+                    </div>
+                    <div id="classArts">
+                        <div id="normalArts">
+                            <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 1"></div>
+                            <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 2"></div>
+                            <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 3"></div>
+                        </div>
+                        <div id="talentArt">
+                            <div class="talentSlot"><img src="img\artKevesBlank.png" alt="Talent Art"></div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </section>
     </body>
