Added arts text, aligned art icons, added stat icons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
                 <div id="characterPortrait">
                     <div class="portrait"><img src="img\NoahPortrait.png" alt="Character Portrait"></div>
                 </div>
+                <div id="stats">
+                    <div class="statIcon"><img src="img\HP.png" alt="HP"></div>
+                    <div class="statIcon"><img src="img\Attack.png" alt="Attack"></div>
+                    <div class="statIcon"><img src="img\Healing.png" alt="Healing Power"></div>
+                    <div class="statIcon"><img src="img\Dexterity.png" alt="Dexterity"></div>
+                    <div class="statIcon"><img src="img\Agility.png" alt="Agility"></div>
+                    <div class="statIcon"><img src="img\Critical.png" alt="Critical Rate"></div>
+                    <div class="statIcon"><img src="img\Block.png" alt="Block Rate"></div>
+                    <div class="statIcon"><img src="img\Physical.png" alt="Physical Defense"></div>
+                    <div class="statIcon"><img src="img\Ether.png" alt="Ether Defense"></div>
+                </div>
                 <div id="equipment">
                     <div id="gems">
                         <div class="gem"><img src="img\gemOutline.png" alt="Gem 1"></div>
@@ -71,18 +82,39 @@
                 </div>
                 <div id="arts">
                     <div id="masterArts">
-                        <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 1"></div>
-                        <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 2"></div>
-                        <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 3"></div>
+                        <div id="artContainerLeft">
+                            <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 1"></div>
+                            <h1 class="artText">Blank</h1>
+                        </div>
+                        <div id="artContainerRight">
+                            <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 2"></div>
+                            <h1 class="artText">Blank</h1>
+                        </div>
+                        <div id="artContainerLeft">
+                            <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 3"></div>
+                            <h1 class="artText">Blank</h1>
+                        </div>
                     </div>
                     <div id="classArts">
                         <div id="normalArts">
-                            <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 1"></div>
-                            <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 2"></div>
-                            <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 3"></div>
+                            <div id="artContainerRight">
+                                <h1 class="artText">Blank</h1>
+                                <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 1"></div>
+                            </div>
+                            <div id="artContainerLeft">
+                                <h1 class="artText">Blank</h1>
+                                <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 2"></div>
+                            </div>
+                            <div id="artContainerRight">
+                                <h1 class="artText">Blank</h1>
+                                <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 3"></div>
+                            </div>
                         </div>
-                        <div id="talentArt">
-                            <div class="talentSlot"><img src="img\artKevesBlank.png" alt="Talent Art"></div>
+                        <div id="artContainerLeft">
+                            <div id="talentArt">
+                                <div class="talentSlot"><img src="img\artKevesBlank.png" alt="Talent Art"></div>
+                                <h1 class="artText">Blank</h1>
+                            </div>
                         </div>
                     </div>
                 </div>
