--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
         <section id="statCalculator">
             <section id="party">
                 <div id="characters">
-                    <div class="icon"><img src="img\NoahParty.png" alt="Icon 1"></div>
-                    <div class="icon"><img src="img\MioParty.png" alt="Icon 2"></div>
-                    <div class="icon"><img src="img\EunieParty.png" alt="Icon 3"></div>
-                    <div class="icon"><img src="img\TaionParty.png" alt="Icon 4"></div>
-                    <div class="icon"><img src="img\LanzParty.png" alt="Icon 5"></div>
-                    <div class="icon"><img src="img\SenaParty.png" alt="Icon 6"></div>
-                    <div class="icon"><img src="img\EthelParty.png" alt="Icon 7"></div>
+                    <div class="icon" id="buttonNoah"><img src="img\NoahParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMio"><img src="img\MioParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunie"><img src="img\EunieParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaion"><img src="img\TaionParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanz"><img src="img\LanzParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSena"><img src="img\SenaParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonHero"><img src="img\EthelParty.png" alt="Icon 7"></div>
                 </div>
                 <div id="ouroboros">
-                    <div class="icon"><img src="img\NoahOuroborosParty.png" alt="Icon 1"></div>
-                    <div class="icon"><img src="img\MioOuroborosParty.png" alt="Icon 2"></div>
-                    <div class="icon"><img src="img\EunieOuroborosParty.png" alt="Icon 3"></div>
-                    <div class="icon"><img src="img\TaionOuroborosParty.png" alt="Icon 4"></div>
-                    <div class="icon"><img src="img\LanzOuroborosParty.png" alt="Icon 5"></div>
-                    <div class="icon"><img src="img\SenaOuroborosParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonNoahOuroboros"><img src="img\NoahOuroborosParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMioOuroboros"><img src="img\MioOuroborosParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunieOuroboros"><img src="img\EunieOuroborosParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaionOuroboros"><img src="img\TaionOuroborosParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanzOuroboros"><img src="img\LanzOuroborosParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSenaOuroboros"><img src="img\SenaOuroborosParty.png" alt="Icon 6"></div>
                 </div>
             </section>
             <section id="center">
                 <div id="characterPortrait">
-                    <div class="portrait"><img src="img\NoahPortrait.png" alt="Character Portrait"></div>
+                    <div class="portrait"><img id="currentCharacter" src="img\NoahPortrait.png" alt="Character Portrait"></div>
                 </div>
                 <div id="stats">
                     <div class="statIcon"><img src="img\HP.png" alt="HP"></div>
@@ -120,5 +120,7 @@
                 </div>
             </section>
         </section>
+
+        <script src="src/index.js"></script>
     </body>
 </html>
