Added placeholder numbers for stats

--- a/index.html
+++ b/index.html
@@ -30,15 +30,42 @@
                     <div class="portrait"><img id="currentCharacter" src="img\NoahPortrait.png" alt="Character Portrait"></div>
                 </div>
                 <div id="stats">
-                    <div class="statIcon"><img src="img\HP.png" alt="HP"></div>
-                    <div class="statIcon"><img src="img\Attack.png" alt="Attack"></div>
-                    <div class="statIcon"><img src="img\Healing.png" alt="Healing Power"></div>
-                    <div class="statIcon"><img src="img\Dexterity.png" alt="Dexterity"></div>
-                    <div class="statIcon"><img src="img\Agility.png" alt="Agility"></div>
-                    <div class="statIcon"><img src="img\Critical.png" alt="Critical Rate"></div>
-                    <div class="statIcon"><img src="img\Block.png" alt="Block Rate"></div>
-                    <div class="statIcon"><img src="img\Physical.png" alt="Physical Defense"></div>
-                    <div class="statIcon"><img src="img\Ether.png" alt="Ether Defense"></div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\HP.png" alt="HP"></div>
+                        <h1 class="artText">5245</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Attack.png" alt="Attack"></div>
+                        <h1 class="artText">1021</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Healing.png" alt="Healing Power"></div>
+                        <h1 class="artText">128</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Dexterity.png" alt="Dexterity"></div>
+                        <h1 class="artText">372</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Agility.png" alt="Agility"></div>
+                        <h1 class="artText">182</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Critical.png" alt="Critical Rate"></div>
+                        <h1 class="artText">20%</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Block.png" alt="Block Rate"></div>
+                        <h1 class="artText">10%</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Physical.png" alt="Physical Defense"></div>
+                        <h1 class="artText">15%</h1>
+                    </div>
+                    <div id="stat-container">
+                        <div class="statIcon"><img src="img\Ether.png" alt="Ether Defense"></div>
+                        <h1 class="artText">15%</h1>
+                    </div>
                 </div>
                 <div id="equipment">
                     <div id="gems">
