--- a/index.html
+++ b/index.html
@@ -8,82 +8,82 @@
         <section id="statCalculator">
             <section id="party">
                 <div id="characters">
-                    <div class="icon" id="buttonNoah"><img src="img\NoahParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMio"><img src="img\MioParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunie"><img src="img\EunieParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaion"><img src="img\TaionParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanz"><img src="img\LanzParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSena"><img src="img\SenaParty.png" alt="Icon 6"></div>
-                    <div class="icon" id="buttonHero"><img src="img\EthelParty.png" alt="Icon 7"></div>
+                    <div class="icon" id="buttonNoah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanz"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSena"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonHero"><img src="img\party\heroes\EthelParty.png" alt="Icon 7"></div>
                 </div>
                 <div id="ouroboros">
-                    <div class="icon" id="buttonNoahOuroboros"><img src="img\NoahOuroborosParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMioOuroboros"><img src="img\MioOuroborosParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunieOuroboros"><img src="img\EunieOuroborosParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaionOuroboros"><img src="img\TaionOuroborosParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanzOuroboros"><img src="img\LanzOuroborosParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSenaOuroboros"><img src="img\SenaOuroborosParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonNoahOuroboros"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMioOuroboros"><img src="img\party\ouroboros\MioOuroborosParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunieOuroboros"><img src="img\party\ouroboros\EunieOuroborosParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaionOuroboros"><img src="img\party\ouroboros\TaionOuroborosParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanzOuroboros"><img src="img\party\ouroboros\LanzOuroborosParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSenaOuroboros"><img src="img\party\ouroboros\SenaOuroborosParty.png" alt="Icon 6"></div>
                 </div>
             </section>
             <section id="center">
                 <div id="characterPortrait">
-                    <div class="portrait"><img id="currentCharacter" src="img\NoahPortrait.png" alt="Character Portrait"></div>
+                    <div class="portrait"><img id="currentCharacter" src="img\portraits\NoahPortrait.png" alt="Character Portrait"></div>
                 </div>
                 <div id="stats">
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\HP.png" alt="HP"></div>
+                        <div class="statIcon"><img src="img\stats\HP.png" alt="HP"></div>
                         <h1 class="artText">5245</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Attack.png" alt="Attack"></div>
+                        <div class="statIcon"><img src="img\stats\Attack.png" alt="Attack"></div>
                         <h1 class="artText">1021</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Healing.png" alt="Healing Power"></div>
+                        <div class="statIcon"><img src="img\stats\Healing.png" alt="Healing Power"></div>
                         <h1 class="artText">128</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Dexterity.png" alt="Dexterity"></div>
+                        <div class="statIcon"><img src="img\stats\Dexterity.png" alt="Dexterity"></div>
                         <h1 class="artText">372</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Agility.png" alt="Agility"></div>
+                        <div class="statIcon"><img src="img\stats\Agility.png" alt="Agility"></div>
                         <h1 class="artText">182</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Critical.png" alt="Critical Rate"></div>
+                        <div class="statIcon"><img src="img\stats\Critical.png" alt="Critical Rate"></div>
                         <h1 class="artText">20%</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Block.png" alt="Block Rate"></div>
+                        <div class="statIcon"><img src="img\stats\Block.png" alt="Block Rate"></div>
                         <h1 class="artText">10%</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Physical.png" alt="Physical Defense"></div>
+                        <div class="statIcon"><img src="img\stats\Physical.png" alt="Physical Defense"></div>
                         <h1 class="artText">15%</h1>
                     </div>
                     <div id="stat-container">
-                        <div class="statIcon"><img src="img\Ether.png" alt="Ether Defense"></div>
+                        <div class="statIcon"><img src="img\stats\Ether.png" alt="Ether Defense"></div>
                         <h1 class="artText">15%</h1>
                     </div>
                 </div>
                 <div id="equipment">
                     <div id="gems">
-                        <div class="gem"><img src="img\gemOutline.png" alt="Gem 1"></div>
-                        <div class="gem"><img src="img\gemOutline.png" alt="Gem 2"></div>
-                        <div class="gem"><img src="img\gemOutline.png" alt="Gem 3"></div>
+                        <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
+                        <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
+                        <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
                     </div>
                     <div id="accessories">
-                        <div class="accessory"><img src="img\accessory.png" alt="Accessory 1"></div>
-                        <div class="accessory"><img src="img\accessory.png" alt="Accessory 2"></div>
-                        <div class="accessory"><img src="img\accessory.png" alt="Accessory 3"></div>
+                        <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 1"></div>
+                        <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 2"></div>
+                        <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 3"></div>
                     </div>
                 </div>
             </section>
             <section id="bottom">
                 <div id="info">
                     <div id="class">
-                        <div class="classIcon"><img src="img\Swordfighter.png" alt="Class Icon"></div>
+                        <div class="classIcon"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
                         <div id="classInfo">
                             <h1 class="infoText">Swordfighter</h1>
                             <p class="infoText">Rank: 20</p>
@@ -96,29 +96,29 @@
                 </div>
                 <div id="skills">
                     <div id="classSkills">
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 1"></div>
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 2"></div>
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 3"></div>
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Class Skill 4"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 1"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 2"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 3"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 4"></div>
                     </div>
                     <div id="masterSkills">
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Master Skill 1"></div>
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Master Skill 2"></div>
-                        <div class="skillSlot"><img src="img\skillSlot.png" alt="Master Skill 3"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Master Skill 1"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Master Skill 2"></div>
+                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Master Skill 3"></div>
                     </div>
                 </div>
                 <div id="arts">
                     <div id="masterArts">
                         <div id="artContainerLeft">
-                            <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 1"></div>
+                            <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
                             <h1 class="artText">Blank</h1>
                         </div>
                         <div id="artContainerRight">
-                            <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 2"></div>
+                            <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 2"></div>
                             <h1 class="artText">Blank</h1>
                         </div>
                         <div id="artContainerLeft">
-                            <div class="artSlot"><img src="img\artAgnusBlank.png" alt="Master Art 3"></div>
+                            <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 3"></div>
                             <h1 class="artText">Blank</h1>
                         </div>
                     </div>
@@ -126,20 +126,20 @@
                         <div id="normalArts">
                             <div id="artContainerRight">
                                 <h1 class="artText">Blank</h1>
-                                <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 1"></div>
+                                <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 1"></div>
                             </div>
                             <div id="artContainerLeft">
                                 <h1 class="artText">Blank</h1>
-                                <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 2"></div>
+                                <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 2"></div>
                             </div>
                             <div id="artContainerRight">
                                 <h1 class="artText">Blank</h1>
-                                <div class="artSlot"><img src="img\artKevesBlank.png" alt="Class Art 3"></div>
+                                <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 3"></div>
                             </div>
                         </div>
                         <div id="artContainerLeft">
                             <div id="talentArt">
-                                <div class="talentSlot"><img src="img\artKevesBlank.png" alt="Talent Art"></div>
+                                <div class="talentSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Talent Art"></div>
                                 <h1 class="artText">Blank</h1>
                             </div>
                         </div>
