Added additional class icons, began work on a Modal window for changing classes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,21 @@
             <section id="bottom">
                 <div id="info">
                     <div id="class">
-                        <div class="classIcon"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
+                        <div class="classIcon" id="classButton"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
+                        <div class="classMenu" id="classModal">
+                            <div class="classMenuContent">
+                            <header class="classMenuHeader">
+                                <span class="close">&times;</span>
+                                <h2>Header</h2>
+                            </header>
+                            <div class="classIcon" id="classButton"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
+                            <div class="classIcon" id="classButton"><img src="img\classes\Zephyr.png" alt="Class Icon"></div>
+                            <div class="classIcon" id="classButton"><img src="img\classes\MedicGunner.png" alt="Class Icon"></div>
+                            <div class="classIcon" id="classButton"><img src="img\classes\Tactician.png" alt="Class Icon"></div>
+                            <div class="classIcon" id="classButton"><img src="img\classes\HeavyGuard.png" alt="Class Icon"></div>
+                            <div class="classIcon" id="classButton"><img src="img\classes\Ogre.png" alt="Class Icon"></div>
+                            </div>
+                        </div>
                         <div id="classInfo">
                             <h1 class="infoText">Swordfighter</h1>
                             <p class="infoText">Rank: 20</p>
