More class icons added, modal window for selecting classes has been adjusted using grid layout, class icons added, custom WebKit scrollbar implemented

--- a/index.html
+++ b/index.html
@@ -86,16 +86,26 @@
                         <div class="classIcon" id="classButton"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
                         <div class="classMenu" id="classModal">
                             <div class="classMenuContent">
-                            <header class="classMenuHeader">
-                                <span class="close">&times;</span>
-                                <h2>Header</h2>
-                            </header>
-                            <div class="classIcon" id="classButton"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
-                            <div class="classIcon" id="classButton"><img src="img\classes\Zephyr.png" alt="Class Icon"></div>
-                            <div class="classIcon" id="classButton"><img src="img\classes\MedicGunner.png" alt="Class Icon"></div>
-                            <div class="classIcon" id="classButton"><img src="img\classes\Tactician.png" alt="Class Icon"></div>
-                            <div class="classIcon" id="classButton"><img src="img\classes\HeavyGuard.png" alt="Class Icon"></div>
-                            <div class="classIcon" id="classButton"><img src="img\classes\Ogre.png" alt="Class Icon"></div>
+                                <header class="classMenuHeader">
+                                    <h2>Class Select</h2>
+                                    <span class="close">&times;</span>
+                                </header>
+                                <div class="class-list">
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Zephyr.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\MedicGunner.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Tactician.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\HeavyGuard.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\FlashFencer.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\WarMedic.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\GuardianCommander.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Thaumaturge.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Yumsmith.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\FullMetalJaguar.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Strategos.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Stalker.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\LoneExile.png" alt="Class Icon"></div>
+                                </div>
                             </div>
                         </div>
                         <div id="classInfo">
