Added images for various buffs, debuffs, and fields that would affect damage dealt or received. Added a scrollable div containing options for setting the currently active player and enemy buffs, debuffs, and field effects. Currently not functional

--- a/index.html
+++ b/index.html
@@ -32,39 +32,91 @@
                 <div id="stats">
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\HP.png" alt="HP"></div>
-                        <h1 class="artText">5245</h1>
+                        <h1 class="info-text-2">5245</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Attack.png" alt="Attack"></div>
-                        <h1 class="artText">1021</h1>
+                        <h1 class="info-text-2">1021</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Healing.png" alt="Healing Power"></div>
-                        <h1 class="artText">128</h1>
+                        <h1 class="info-text-2">128</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Dexterity.png" alt="Dexterity"></div>
-                        <h1 class="artText">372</h1>
+                        <h1 class="info-text-2">372</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Agility.png" alt="Agility"></div>
-                        <h1 class="artText">182</h1>
+                        <h1 class="info-text-2">182</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Critical.png" alt="Critical Rate"></div>
-                        <h1 class="artText">20%</h1>
+                        <h1 class="info-text-2">20%</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Block.png" alt="Block Rate"></div>
-                        <h1 class="artText">10%</h1>
+                        <h1 class="info-text-2">10%</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Physical.png" alt="Physical Defense"></div>
-                        <h1 class="artText">15%</h1>
+                        <h1 class="info-text-2">15%</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Ether.png" alt="Ether Defense"></div>
-                        <h1 class="artText">15%</h1>
+                        <h1 class="info-text-2">15%</h1>
+                    </div>
+                </div>
+                <div id="statuses">
+                    <h1 class="info-text-3">Player Buffs</h1>
+                    <div class="buffs">
+                        <div class="buffIcon"><img src="img\statuses\buffs\attack-up.png" alt="Attack Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\defense-up.png" alt="Defense Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\accuracy-up.png" alt="Accuracy Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\evasion-up.png" alt="Evasion Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-rate-up.png" alt="Critical Rate Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-hit-plus.png" alt="Critical Hit Plus"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\power-charge.png" alt="Power Charge"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\armor-veil.png" alt="Armor Veil"></div>
+                    </div>
+                    <h1 class="info-text-3">Player Debuffs</h1>
+                    <div class="buffs">
+                        <div class="buffIcon"><img src="img\statuses\debuffs\attack-down.png" alt="Attack Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\physical-defense-down.png" alt="Physical Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\ether-defense-down.png" alt="Ether Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" alt="Accuracy Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" alt="Evasion Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\flame-clock-low.png" alt="Flame Clock Low"></div>
+                    </div>
+                    <h1 class="info-text-3">Enemy Buffs</h1>
+                    <div class="buffs">
+                        <div class="buffIcon"><img src="img\statuses\buffs\attack-up.png" alt="Attack Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\defense-up.png" alt="Defense Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\accuracy-up.png" alt="Accuracy Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\evasion-up.png" alt="Evasion Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-rate-up.png" alt="Critical Rate Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-hit-plus.png" alt="Critical Hit Plus"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\power-charge.png" alt="Power Charge"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\armor-veil.png" alt="Armor Veil"></div>
+                    </div>
+                    <h1 class="info-text-3">Enemy Debuffs</h1>
+                    <div class="buffs">
+                        <div class="buffIcon"><img src="img\statuses\debuffs\attack-down.png" alt="Attack Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\physical-defense-down.png" alt="Physical Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\ether-defense-down.png" alt="Ether Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" alt="Accuracy Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" alt="Evasion Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\reduce-all.png" alt="Reduce All"></div>
+                    </div>
+                    <h1 class="info-text-3">Fields</h1>
+                    <div class="buffs">
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Attack Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Defense Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Evasion Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Critical Rate Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Armor Veil"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\art-follow-up.png" alt="Art Follow-Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\defender.png" alt="Defender"></div>
                     </div>
                 </div>
                 <div id="equipment">
@@ -154,13 +206,13 @@
                             </div>
                         </div>
                         <div id="classInfo">
-                            <h1 class="infoText">Swordfighter</h1>
-                            <p class="infoText">Rank: 20</p>
+                            <h1 class="info-text-1">Swordfighter</h1>
+                            <p class="info-text-1">Rank: 20</p>
                         </div>
                     </div>
                     <div id="characterLevel">
-                        <h1 class="infoText">Level:</h1>
-                        <h1 class="infoText">99</h1>
+                        <h1 class="info-text-1">Level:</h1>
+                        <h1 class="info-text-1">99</h1>
                     </div>
                 </div>
                 <div id="skills">
@@ -180,36 +232,36 @@
                     <div id="masterArts">
                         <div id="artContainerLeft">
                             <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
-                            <h1 class="artText">Blank</h1>
+                            <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerRight">
                             <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 2"></div>
-                            <h1 class="artText">Blank</h1>
+                            <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerLeft">
                             <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 3"></div>
-                            <h1 class="artText">Blank</h1>
+                            <h1 class="info-text-2">Blank</h1>
                         </div>
                     </div>
                     <div id="classArts">
                         <div id="normalArts">
                             <div id="artContainerRight">
-                                <h1 class="artText">Blank</h1>
+                                <h1 class="info-text-2">Blank</h1>
                                 <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 1"></div>
                             </div>
                             <div id="artContainerLeft">
-                                <h1 class="artText">Blank</h1>
+                                <h1 class="info-text-2">Blank</h1>
                                 <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 2"></div>
                             </div>
                             <div id="artContainerRight">
-                                <h1 class="artText">Blank</h1>
+                                <h1 class="info-text-2">Blank</h1>
                                 <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 3"></div>
                             </div>
                         </div>
                         <div id="artContainerLeft">
                             <div id="talentArt">
                                 <div class="talentSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Talent Art"></div>
-                                <h1 class="artText">Blank</h1>
+                                <h1 class="info-text-2">Blank</h1>
                             </div>
                         </div>
                     </div>
